--- a/pages/myCard/myCard.wxml
+++ b/pages/myCard/myCard.wxml
@@ -9,7 +9,7 @@
 <view class="personCenter_list mg_top30 border_bottom">
 	<view class="left"><text>姓名</text></view>
 	<view class="fr">
-	<input name="realName" type="text" value="{{realName}}" placeholder="{{realName?realName:'请输入您的真实姓名'}}" />
+	<input name="realName" type="text" value="{{realName}}" placeholder="请输入您的真实姓名" />
 	<text class="wb_arrow_right "></text>
 	</view>
 	
@@ -17,14 +17,14 @@
 <view class="personCenter_list  border_bottom">
 	<view class="left"><text>手机号码</text></view>
 	<view class="fr">
-		<input name="phone"  value="{{phone}}" placeholder="{{phone?phone:'请输入您的手机号码'}}" />
+		<input name="phone"  value="{{phone}}" placeholder="请输入您的手机号码" />
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
 <view class="personCenter_list ">
 	<view class="left"><text>个人邮箱</text></view>
 	<view class="fr">
-		<input name="email" value="{{email}}" placeholder="{{email?email:'请输入您的邮箱地址'}}" />
+		<input name="email" value="{{email}}" placeholder="请输入您的邮箱地址" />
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
@@ -32,19 +32,19 @@
 <view class="personCenter_list mg_top30 border_bottom">
 	<view class="left"><text>毕业院校</text></view>
 	<view class="fr" >
-		<input name="school" value="{{school}}" placeholder="{{school?school:'请输入您的毕业院校'}}" />
+		<input name="school" value="{{school}}" placeholder="请输入您的毕业院校" />
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
 <view class="personCenter_list ">
 	<view class="left"><text>我的学历</text></view>
 	<view class="fr">
-		<input name="degree"  value="{{degree}}" placeholder="{{degree?degree:'请输入您的学历'}}" />
+		<input name="degree"  value="{{degree}}" placeholder="请输入您的学历" />
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
-
-<view class="personCenter_list mg_top30 border_bottom">
+<navigator url="../hobbiesLable/hobbiesLable?hobbiesLable={{hobbies}}" redirect>
+<view class="personCenter_list mg_top30 border_bottom" bindtap="clickH">
 	<view class="left"><text>兴趣爱好</text></view>
 	<view class="fr">
 	<block  wx:for="{{hobbies}}" wx:for-index="idx" >
@@ -53,7 +53,8 @@
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
-<navigator url="../declaration/declaration?declaration={{declaration}}">
+</navigator>
+<navigator url="../declaration/declaration?declaration={{declaration}}" redirect>
 <view class="personCenter_list ">
 	<text>加友宣言</text>
 	<view class="fr">
@@ -68,4 +69,4 @@
 </form>
 <!--底部导航-->
 <import src="../footer/footer.wxml" />
-<template is="footer" data="{{...footerConfig}}"/>
+<template is="footer" data=""/>
