--- a/pages/personCenter/personCenter.wxml
+++ b/pages/personCenter/personCenter.wxml
@@ -36,4 +36,4 @@
 </view>
 <!--底部导航-->
 <import src="../footer/footer.wxml" />
-<template is="footer" data="{{...footerConfig}}"/>
+<template is="footer" data=""/>
