--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -2,7 +2,7 @@
 .banner-container{
   width: 100%;
   height: 150px;
-  background: #638395;
+  background: #666666;
 }
 .banner-container image{
   width: 100%;
@@ -209,12 +209,23 @@
   padding: 15rpx 5rpx;
   margin: 20rpx;
   line-height:30rpx;
-  margin-bottom:20rpx;
   background: #ffffff;
   text-align:left;
+  font-size: 30rpx;
 }
+
+.detail_box_p {
+  padding: 20rpx;
+}
+
 .detail_box text{
-	margin:10rpx 0;
+	line-height: 1.2;
+}
+
+.detail_box_p image {
+  width: 100%;
+  height: 400rpx;
+  box-sizing: border-box;
 }
 
 
