--- a/pages/eventPublish/eventPublish.wxss
+++ b/pages/eventPublish/eventPublish.wxss
@@ -251,3 +251,90 @@ swiper-item {
     padding: 50rpx 30rpx;
     color: #00b371;
 }
+
+.address-mask {
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #000000;
+  opacity: 0.7;
+  display: none;
+}
+
+.address-edit-panel {
+  width: 90%;
+  height: 100%;
+  background-color: #eeeff1;
+  position: fixed;
+  top: 0;
+  right: -90%;
+  z-index: 999999;
+  box-sizing: border-box;
+}
+
+.panel-wrap {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.search-wrap {
+    height: 82rpx;
+    display: flex;
+    flex-direction: row;
+    background-color: #ffffff;
+}
+
+.search-input-wrap {
+    width: 590rpx;
+    box-sizing: border-box;
+    padding: 10rpx 32rpx;
+    position: relative;
+}
+
+.search-input {
+    width: 100%;
+    height: 62rpx;
+    line-height: 62rpx;
+    font-size: 24rpx;
+    border-radius: 31rpx;
+    background-color: #e3e3e6;
+    padding: 0 28rpx 0 80rpx;
+    box-sizing: border-box;
+}
+
+.search-icon {
+    width: 34rpx;
+    height: 34rpx;
+    position: absolute;
+    top: 24rpx;
+    left: 58rpx;
+    background-image: url(http://eventsocial-1253427581.cossh.myqcloud.com/v1.0/search_icon.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+.address-confirm {
+    height: 82rpx;
+    line-height: 82rpx;
+    color: #2d2e33;
+    font-size: 30rpx;
+}
+
+.map-wrap {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.map-wrap map {
+    flex: 1;
+    width: 100%;
+}
+
+.address-list {
+    height: 650rpx;
+}
