--- a/pages/voteModule/voteModule.wxml
+++ b/pages/voteModule/voteModule.wxml
@@ -19,9 +19,11 @@
 
         </scroll-view>
         <view class="panel-btn-area">
-            <view wx:if="{{isActive && isAllowVote && !hasVoted}}" class="panel-btn" bindtap="onSubmitVote"></view>
+            <view wx:if="{{isActive  && !hasVoted}}" class="panel-btn" bindtap="onSubmitVote"></view>
             <view wx:elif="{{!isActive}}" class="panel-disabled">当前不可投票</view>
+            <!--
             <view wx:elif="{{!isAllowVote}}" class="panel-disabled">没有投票权限</view>
+            -->
             <view wx:elif="{{hasVoted}}" class="panel-disabled">您已经投过票</view>
         </view>
     </view>
