--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -330,3 +330,21 @@ top:10rpx;
 }
 .comment3{ border-right: none;
   }
+  
+  .modal-window {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 999;
+	background-color: rgba(0, 0, 0, 0.6);
+}
+
+.modal-window {
+	text-align: right;
+}
+.modal-window image{
+  widows: 570rpx;
+  height: 101rpx;
+}
