--- a/pages/myCard/myCard.wxml
+++ b/pages/myCard/myCard.wxml
@@ -9,22 +9,24 @@
 <view class="personCenter_list mg_top30 border_bottom">
 	<view class="left"><text>姓名</text></view>
 	<view class="fr">
-	<input name="realName" type="text" value="{{realName}}" placeholder="请输入您的真实姓名" />
+	<input name="realName" bindinput="bindInput" data-id="realName" type="text" value="{{realName}}" placeholder="请输入您的真实姓名" />
 	<text class="wb_arrow_right "></text>
 	</view>
 	
 </view>
+<navigator url="../modifyCode/modifyCode?phone={{phone}}">
 <view class="personCenter_list  border_bottom">
 	<view class="left"><text>手机号码</text></view>
-	<view class="fr">
-		<input name="phone"  value="{{phone}}" placeholder="请输入您的手机号码" />
+	<view class="fr" bindtap="showCode">
+		{{phone}}
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
+</navigator>
 <view class="personCenter_list ">
 	<view class="left"><text>个人邮箱</text></view>
 	<view class="fr">
-		<input name="email" value="{{email}}" placeholder="请输入您的邮箱地址" />
+		<input name="email" bindinput="bindInput" data-id="email" value="{{email}}" placeholder="请输入您的邮箱地址" />
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
@@ -32,29 +34,29 @@
 <view class="personCenter_list mg_top30 border_bottom">
 	<view class="left"><text>毕业院校</text></view>
 	<view class="fr" >
-		<input name="school" value="{{school}}" placeholder="请输入您的毕业院校" />
+		<input name="school" bindinput="bindInput" data-id="school" value="{{school}}" placeholder="请输入您的毕业院校" />
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
 <view class="personCenter_list ">
 	<view class="left"><text>我的学历</text></view>
 	<view class="fr">
-		<input name="degree"  value="{{degree}}" placeholder="请输入您的学历" />
+		<input name="degree" bindinput="bindInput" data-id="degree" value="{{degree}}" placeholder="请输入您的学历" />
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
-<navigator url="../hobbiesLable/hobbiesLable?hobbiesLable={{hobbies}}" redirect>
+<navigator url="../hobbiesLable/hobbiesLable?hobbiesLable={{hobbies}}">
 <view class="personCenter_list mg_top30 border_bottom" bindtap="clickH">
 	<view class="left"><text>兴趣爱好</text></view>
 	<view class="fr">
 	<block  wx:for="{{hobbies}}" wx:for-index="idx" >
-		{{item}}<icon type="clear" size="20" color="#d7dcf5" bindtap="clickClose" data-id="{{idx}}"/>
+		{{item}}、
 	</block>
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
 </navigator>
-<navigator url="../declaration/declaration?declaration={{declaration}}" redirect>
+<navigator url="../declaration/declaration?declaration={{declaration}}">
 <view class="personCenter_list ">
 	<text>加友宣言</text>
 	<view class="fr">
