--- a/pages/myPublished/myPublished.wxml
+++ b/pages/myPublished/myPublished.wxml
@@ -1,5 +1,6 @@
 <!--myFollows.wxml-->
 <block  wx:for="{{list}}" wx:key="unique">
+<navigator url="../detail/detail?eventId={{item.eventId}}">
 <view class="follow_list">
 	<view class="f_img">
 		<view class="icon"></view>
@@ -16,8 +17,8 @@
 	 </view>
 	</view>
 </view>
+</navigator>
 </block >
-
 <view class="no_event">{{isNoData}}</view>
 <!--
 class="publishing"
