--- a/pages/modifyCode/modifyCode.wxml
+++ b/pages/modifyCode/modifyCode.wxml
@@ -5,7 +5,7 @@
 	<view class="left">
 	</view>
 	<view class="center">
-		加友宣言
+		修改手机号码
 	</view>
 	<view class="right">
 	<button formType="submit" > 保存 </button>
@@ -15,7 +15,7 @@
 <view class="personCenter_list  border_bottom">
 	<view class="left"><text>手机号码</text></view>
 	<view class="fr" bindtap="showCode">
-			<input name="phone" bindinput="bindPhoneInput"  value="{{phone}}" placeholder="请输入您的手机号码" />
+			<input type="number" name="phone" bindinput="bindPhoneInput"  value="{{phone}}" placeholder="请输入您的手机号码" />
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
